syntax = "proto3";
package pb;

option go_package = "pratikshakuldeep456/grpc-server/gen/pb;pb";

message Campaign {
  string name = 1;
  string description = 2;
  string start_time = 3;
  string end_time = 4;
  bool active = 5;
  int32 priority = 6;
  string condition_json = 7;
}


message CreateCampaignRequest {
  repeated Campaign campaign = 1;
  }
  
  message CreateCampaignResponse {
    string status = 1;
    string message = 2;
  }