syntax = "proto3";
package pb;
option go_package = "pratikshakuldeep456/grpc-server/gen/pb;pb";

// Import all message definitions
import "get_campaign.proto";
import "create_campaign.proto";

service CampaignService {
  rpc GetCampaign(GetCampaignRequest) returns (GetCampaignResponse);
  rpc CreateCampaign(CreateCampaignRequest) returns (CreateCampaignResponse);
}


